versioned_docs/version-6.0.0/_shared/core-concepts/accessibility.mdx

## Overview

We want our products to be fully experienced by the widest number of users including disabled users.

We take accessibility pretty seriously and spent a couple of iterations on it. By adhering to standards like [WAI-ARIA](http://www.w3.org/WAI/PF/aria-practices/), [Section 508](http://www.section508.gov/), and [WCAG 2.2](https://www.w3.org/TR/WCAG/) we create accessible products that can be used well together with an assistive technology, like a screen reader.

Since the technology has evolved, nowadays not only basic text-driven experiences have to be made accessible, but also other features.

## Accessibility Compliance

Mobiscroll components are designed to support WCAG-based accessibility standards and can be used to build applications aligned with major public-sector accessibility frameworks worldwide.

They are largely aligned with WCAG 2.2 A and AA requirements, with strong support for keyboard navigation, WAI-ARIA, and screen reader compatibility. 
However, full WCAG AA compliance is not yet achieved, as WCAG 1.4.3 Contrast (Minimum) is not fully supported in all cases. This known limitation is actively being addressed in upcoming releases.

Mobiscroll can therefore support the development of applications targeting major global accessibility regulations, while full compliance depends on the complete application implementation and resolving this remaining gap.

#### Mobiscroll can be used in applications targeting frameworks such as:
- 🇪🇺 EN 301 549 (European Union)
- 🇫🇷 RGAA (France)
- 🇺🇸 Section 508 (United States)
- 🇨🇦 AODA (Canada)

As well as other WCAG-aligned national regulations:
- 🇩🇪 BITV 2.0 (Germany)
- 🇮🇹 Legge Stanca (Italy)
- 🇪🇸 UNE 139803 (Spain)
- 🇳🇱 DigiToegankelijk (Netherlands)
- 🇸🇪 DOS-lagen (Sweden)
- 🇩🇰 Web Accessibility Act (Denmark)
- 🇫🇮 Act on Digital Services (Finland)
- 🇳🇴 Universal Design of ICT (Norway)
- 🇬🇧 Public Sector Accessibility Regulations (UK)
- 🇯🇵 JIS X 8341-3 (Japan)
- 🇮🇱 Standard 5568 (Israel)

#### Compliance responsibility
Mobiscroll provides accessible UI components intended to support WCAG-based development.
It does not, by itself, ensure that an application is fully compliant with accessibility regulations.

Organizations using Mobiscroll are responsible for:
- publishing an accessibility statement
- maintaining accessibility monitoring and audits
- implementing accessibility governance processes
- ensuring content, structure, and workflows meet accessibility requirements

## WCAG 2.2

The [Web Content Accessibility Guidelines (WCAG)](https://www.w3.org/WAI/standards-guidelines/wcag/) provide guidelines developed by the World [Wide Web Consortium (W3C)](https://www.w3.org/) to ensure web content is accessible to people with disabilities. WCAG 2.2 establishes a framework of accessibility principles and their associated success criteria. The level of accessibility conformance achieved by a web application is determined by the extent to which it meets these success criteria, categorized into three levels: A, AA, and AAA.

While Mobiscroll components are not fully compliant with WCAG 2.2 at this time, we are committed to enhancing their accessibility. We are actively working on improving compliance and continuously making progress.

The guidelines and success criteria are organized around the following four principles:

### [1. Perceivable](https://www.w3.org/TR/WCAG22/#perceivable)

Information and user interface components must be presentable to users in ways they can perceive.

<table className="tabel-max-width wcag-table">
  <tbody>
    <tr>
      <th colSpan="2">Guidelines</th>
      <th className="level-colum-width">Level</th>
      <th className="compatibility-colum-width">
        Compatibility
        <label className="table-hide-wrapper">
          <input type="checkbox" className="table-hide-switch" />
          Show only applicable items
        </label>
      </th>
    </tr>
    <tr className="four-column-tr">
      <th><a href='https://www.w3.org/TR/WCAG22/#text-alternatives'>1.1 Text Alternatives</a></th>
      <td><a href='https://www.w3.org/TR/WCAG22/#non-text-content'>1.1.1 Non-text Content</a></td>
      <td>A</td>
      <td>Supported</td>
    </tr>
    <tr className="js-not-applicable four-column-tr">
      <th rowSpan="9"><a href='https://www.w3.org/TR/WCAG22/#time-based-media'>1.2 Time-based Media</a></th>
      <td><a href='https://www.w3.org/TR/WCAG22/#audio-only-and-video-only-prerecorded'>1.2.1 Audio-only and Video-only (Prerecorded)</a></td>
      <td>A</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#captions-prerecorded'>1.2.2 Captions (Prerecorded)</a></td>
      <td>A</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#audio-description-or-media-alternative-prerecorded'>1.2.3 Audio Description or Media Alternative (Prerecorded)</a></td>
      <td>A</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#captions-live'>1.2.4 Captions (Live)</a></td>
      <td>AA</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#audio-description-prerecorded'>1.2.5 Audio Description (Prerecorded)</a></td>
      <td>AA</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#sign-language-prerecorded'>1.2.6 Sign Language (Prerecorded)</a></td>
      <td>AAA</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#extended-audio-description-prerecorded'>1.2.7 Extended Audio Description (Prerecorded)</a></td>
      <td>AAA</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#media-alternative-prerecorded'>1.2.8 Media Alternative (Prerecorded)</a></td>
      <td>AAA</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#audio-only-live'>1.2.9 Audio-only (Live)</a></td>
      <td>AAA</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="four-column-tr">
      <th rowSpan="6"><a href='https://www.w3.org/TR/WCAG22/#adaptable'>1.3 Adaptable</a></th>
      <td><a href='https://www.w3.org/TR/WCAG22/#info-and-relationships'>1.3.1 Info and Relationships</a></td>
      <td>A</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#meaningful-sequence'>1.3.2 Meaningful Sequence</a></td>
      <td>A</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#sensory-characteristics'>1.3.3 Sensory Characteristics</a></td>
      <td>A</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#orientation'>1.3.4 Orientation</a></td>
      <td>AA</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#identify-input-purpose'>1.3.5 Identify Input Purpose</a></td>
      <td>AA</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#identify-purpose'>1.3.6 Identify Purpose</a></td>
      <td>AAA</td>
      <td>Supported</td>
    </tr>
    <tr className="four-column-tr">
      <th className="tabel-background-white hidden-bg-striped" rowSpan="13"><a href='https://www.w3.org/TR/WCAG22/#distinguishable'>1.4 Distinguishable</a></th>
      <td><a href='https://www.w3.org/TR/WCAG22/#use-of-color'>1.4.1 Use of Color</a></td>
      <td>A</td>
      <td>Supported</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#audio-control'>1.4.2 Audio Control</a></td>
      <td>A</td>
      <td>Not Applicable</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#contrast-minimum'>1.4.3 Contrast (Minimum)</a></td>
      <td>AA</td>
      <td>Not fully supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#resize-text'>1.4.4 Resize Text</a></td>
      <td>AA</td>
      <td>Supported</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#images-of-text'>1.4.5 Images of Text</a></td>
      <td>AA</td>
      <td>Not Applicable</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#contrast-enhanced'>1.4.6 Contrast (Enhanced)</a></td>
      <td>AAA</td>
      <td>Not fully supported</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#low-or-no-background-audio'>1.4.7 Low or No Background Audio</a></td>
      <td>AAA</td>
      <td>Not Applicable</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#visual-presentation'>1.4.8 Visual Presentation</a></td>
      <td>AAA</td>
      <td>Supported</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#images-of-text-no-exception'>1.4.9 Images of Text (No Exception)</a></td>
      <td>AAA</td>
      <td>Not Applicable</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#reflow'>1.4.10 Reflow</a></td>
      <td>AA</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#non-text-contrast'>1.4.11 Non-text Contrast</a></td>
      <td>AA</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#text-spacing'>1.4.12 Text Spacing</a></td>
      <td>AA</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#content-on-hover-or-focus'>1.4.13 Content on Hover or Focus</a></td>
      <td>AA</td>
      <td>Supported</td>
    </tr>
  </tbody>
</table>

### [2. Operable](https://www.w3.org/TR/WCAG22/#operable)

User interface components and navigation must be operable.

<table className="tabel-max-width wcag-table">
  <tbody>
    <tr>
      <th colSpan="2">Guidelines</th>
      <th className="level-colum-width">Level</th>
      <th className="compatibility-colum-width">
          <>
            Compatibility{" "}
            <label className="table-hide-wrapper">
              <input type="checkbox" className="table-hide-switch" />
              Show only applicable items
            </label>
          </>
        </th>
    </tr>
    <tr className="four-column-tr">
      <th rowSpan="4"><a href='https://www.w3.org/TR/WCAG22/#keyboard-accessible'>2.1 Keyboard Accessible</a></th>
      <td><a href='https://www.w3.org/TR/WCAG22/#keyboard'>2.1.1 Keyboard</a></td>
      <td>A</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#no-keyboard-trap'>2.1.2 No Keyboard Trap</a></td>
      <td>A</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#keyboard-no-exception'>2.1.3 Keyboard (No Exception)</a></td>
      <td>AAA</td>
      <td>Supported</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#character-key-shortcuts'>2.1.4 Character Key Shortcuts</a></td>
      <td>A</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="four-column-tr">
      <th className="tabel-background-white" rowSpan="6"><a href='https://www.w3.org/TR/WCAG22/#enough-time'>2.2 Enough Time</a></th>
      <td><a href='https://www.w3.org/TR/WCAG22/#timing-adjustable'>2.2.1 Timing Adjustable</a></td>
      <td>A</td>
      <td>Supported</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#pause-stop-hide'>2.2.2 Pause, Stop, Hide</a></td>
      <td>A</td>
      <td>Not Applicable</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#no-timing'>2.2.3 No Timing</a></td>
      <td>AAA</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#interruptions'>2.2.4 Interruptions</a></td>
      <td>AAA</td>
      <td>Supported</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#re-authenticating'>2.2.5 Re-authenticating</a></td>
      <td>AAA</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#timeouts'>2.2.6 Timeouts</a></td>
      <td>AAA</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="four-column-tr">
      <th rowSpan="3"><a href='https://www.w3.org/TR/WCAG22/#seizures-and-physical-reactions'>2.3 Seizures and Physical Reactions</a></th>
      <td><a href='https://www.w3.org/TR/WCAG22/#three-flashes-or-below-threshold'>2.3.1 Three Flashes or Below Threshold</a></td>
      <td>A</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#three-flashes'>2.3.2 Three Flashes</a></td>
      <td>AAA</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#animation-from-interactions'>2.3.3 Animation from Interactions</a></td>
      <td>AAA</td>
      <td>Supported</td>
    </tr>
    <tr className="js-not-applicable four-column-tr">
      <th rowSpan="13"><a href='https://www.w3.org/TR/WCAG22/#navigable'>2.4 Navigable</a></th>
      <td><a href='https://www.w3.org/TR/WCAG22/#bypass-blocks'>2.4.1 Bypass Blocks</a></td>
      <td>A</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#page-titled'>2.4.2 Page Titled</a></td>
      <td>A</td>
      <td>Not Applicable</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#focus-order'>2.4.3 Focus Order</a></td>
      <td>A</td>
      <td>Supported</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#link-purpose-in-context'>2.4.4 Link Purpose (In Context)</a></td>
      <td>A</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#multiple-ways'>2.4.5 Multiple Ways</a></td>
      <td>AA</td>
      <td>Not Applicable</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#headings-and-labels'>2.4.6 Headings and Labels</a></td>
      <td>AA</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#focus-visible'>2.4.7 Focus Visible</a></td>
      <td>AA</td>
      <td>Supported</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#location'>2.4.8 Location</a></td>
      <td>AAA</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#link-purpose-link-only'>2.4.9 Link Purpose (Link Only)</a></td>
      <td>AAA</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#section-headings'>2.4.10 Section Headings</a></td>
      <td>AAA</td>
      <td>Not Applicable</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#focus-not-obscured-minimum'>2.4.11 Focus Not Obscured (Minimum)</a></td>
      <td>AA</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#focus-not-obscured-enhanced'>2.4.12 Focus Not Obscured (Enhanced)</a></td>
      <td>AAA</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#focus-appearance'>2.4.13 Focus Appearance</a></td>
      <td>AAA</td>
      <td>Not fully supported</td>
    </tr>
    <tr className="four-column-tr">
      <th rowSpan="8" className="hidden-bg-striped"><a href='https://www.w3.org/TR/WCAG22/#input-modalities'>2.5 Input Modalities</a></th>
      <td><a href='https://www.w3.org/TR/WCAG22/#pointer-gestures'>2.5.1 Pointer Gestures</a></td>
      <td>A</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#pointer-cancellation'>2.5.2 Pointer Cancellation</a></td>
      <td>A</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#label-in-name'>2.5.3 Label in Name</a></td>
      <td>A</td>
      <td>Supported</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#motion-actuation'>2.5.4 Motion Actuation</a></td>
      <td>A</td>
      <td>Not Applicable</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#target-size-enhanced'>2.5.5 Target Size (Enhanced)</a></td>
      <td>AAA</td>
      <td>Not fully supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#concurrent-input-mechanisms'>2.5.6 Concurrent Input Mechanisms</a></td>
      <td>AAA</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#dragging-movements'>2.5.7 Dragging Movements</a></td>
      <td>AA</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#target-size-minimum'>2.5.8 Target Size (Minimum)</a></td>
      <td>AA</td>
      <td>Supported</td>
    </tr>
  </tbody>
</table>

### [3. Understandable](https://www.w3.org/TR/WCAG22/#understandable)

Information and the operation of user interface must be understandable.

<table className="tabel-max-width wcag-table">
  <tbody>
    <tr>
      <th colSpan="2">Guidelines</th>
      <th className="level-colum-width">Level</th>
      <th className="compatibility-colum-width">
          <>
            Compatibility{" "}
            <label className="table-hide-wrapper">
              <input type="checkbox" className="table-hide-switch" />
              Show only applicable items
            </label>
          </>
        </th>
    </tr>
    <tr className="js-not-applicable four-column-tr">
      <th rowSpan="6"><a href='https://www.w3.org/TR/WCAG22/#readable'>3.1 Readable</a></th>
      <td><a href='https://www.w3.org/TR/WCAG22/#language-of-page'>3.1.1 Language of Page</a></td>
      <td>A</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#language-of-parts'>3.1.2 Language of Parts</a></td>
      <td>AA</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#unusual-words'>3.1.3 Unusual Words</a></td>
      <td>AAA</td>
      <td>Not Applicable</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#abbreviations'>3.1.4 Abbreviations</a></td>
      <td>AAA</td>
      <td>Supported</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#reading-level'>3.1.5 Reading Level</a></td>
      <td>AAA</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#pronunciation'>3.1.6 Pronunciation</a></td>
      <td>AAA</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="four-column-tr">
      <th className="tabel-background-white" rowSpan="6"><a href='https://www.w3.org/TR/WCAG22/#predictable'>3.2 Predictable</a></th>
      <td><a href='https://www.w3.org/TR/WCAG22/#on-focus'>3.2.1 On Focus</a></td>
      <td>A</td>
      <td>Supported</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#on-input'>3.2.2 On Input</a></td>
      <td>A</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#consistent-navigation'>3.2.3 Consistent Navigation</a></td>
      <td>AA</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#consistent-identification'>3.2.4 Consistent Identification</a></td>
      <td>AA</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#change-on-request'>3.2.5 Change on Request</a></td>
      <td>AAA</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#consistent-help'>3.2.6 Consistent Help</a></td>
      <td>A</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="four-column-tr">
      <th rowSpan="9" className="hidden-bg-striped"><a href='https://www.w3.org/TR/WCAG22/#input-assistance'>3.3 Input Assistance</a></th>
      <td><a href='https://www.w3.org/TR/WCAG22/#error-identification'>3.3.1 Error Identification</a></td>
      <td>A</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#labels-or-instructions'>3.3.2 Labels or Instructions</a></td>
      <td>A</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#error-suggestion'>3.3.3 Error Suggestion</a></td>
      <td>AA</td>
      <td>Supported</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#error-prevention-legal-financial-data'>3.3.4 Error Prevention (Legal, Financial, Data)</a></td>
      <td>AA</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#help'>3.3.5 Help</a></td>
      <td>AAA</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#error-prevention-all'>3.3.6 Error Prevention (All)</a></td>
      <td>AAA</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#redundant-entry'>3.3.7 Redundant Entry</a></td>
      <td>A</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#accessible-authentication-minimum'>3.3.8 Accessible Authentication (Minimum)</a></td>
      <td>AA</td>
      <td>Not Applicable</td>
    </tr>
    <tr className="js-not-applicable">
      <td><a href='https://www.w3.org/TR/WCAG22/#accessible-authentication-enhanced'>3.3.9 Accessible Authentication (Enhanced)</a></td>
      <td>AAA</td>
      <td>Not Applicable</td>
    </tr>
  </tbody>
</table>

### [4. Robust](https://www.w3.org/TR/WCAG22/#robust)

Content must be robust enough that it can be interpreted reliably by a wide variety of user agents, including assistive technologies.

<table className="tabel-max-width wcag-table">
  <tbody>
    <tr>
      <th colSpan="2">Guidelines</th>
      <th className="level-colum-width">Level</th>
      <th className="compatibility-colum-width">Compatibility</th>
    </tr>
    <tr className="four-column-tr">
      <th rowSpan="3"><a href='https://www.w3.org/TR/WCAG22/#compatible'>4.1 Compatible</a></th>
      <td><a href='https://www.w3.org/TR/WCAG22/#parsing'>4.1.1 Parsing (Obsolete and removed)</a></td>
      <td>-</td>
      <td>-</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#name-role-value'>4.1.2 Name, Role, Value</a></td>
      <td>A</td>
      <td>Supported</td>
    </tr>
    <tr>
      <td><a href='https://www.w3.org/TR/WCAG22/#status-messages'>4.1.3 Status Messages</a></td>
      <td>AA</td>
      <td>Supported</td>
    </tr>
  </tbody>
</table>

### WCAG compliance for each component

WCAG compliance levels for each Mobiscroll component:
- [Datepicker](../datepicker/accessibility#wcag-22)
- [Eventcalendar](../eventcalendar/accessibility#wcag-22)
- [Select](../select/accessibility#wcag-22)
- [Popup](../popup/accessibility#wcag-22)
- [Alerts & notifications](../notifications/accessibility#wcag-22)
- [Forms](../forms/accessibility#wcag-22)

## Section 508

### [Section 1194.21](https://www.access-board.gov/ict/#d21) - Software applications and operating systems

The following table shows the level of support that Mobiscroll provides for the Section 1194.21

<table>
  <tbody>
    <tr>
      <th>Criteria</th>
      <th>Supporting features</th>
      <th>Remarks</th>
    </tr>
    <tr>
      <td>(a) When software is designed to run on a system that has a keyboard product functions shall be executable from a keyboard where the function itself or the result of performing a function can be discerned textually.</td>
      <td>Supported</td>
      <td>Native html keyboard support kept where relevant, custom key bindings added where needed</td>
    </tr>
    <tr>
      <td>(b) Applications shall not disrupt or disable activated features of other products that are identified as accessibility features where those features are developed and documented according to industry standards. Applications also shall not disrupt or disable activated features of any operating system that are identified as accessibility features where the application programming interface for those accessibility features has been documented by the manufacturer of the operating system and is available to the product developer.</td>
      <td>Supported</td>
      <td>Mobiscroll does nothing to disrupt or disable activated accessibility features</td>
    </tr>
    <tr>
      <td>(c) A well-defined on-screen indication of the current focus shall be provided that moves among interactive interface elements as the input focus changes. The focus shall be programmatically exposed so that assistive technology can track focus and focus changes.</td>
      <td>Supported</td>
      <td>In some cases the browser’s native focus indicator styling is overwritten with custom styling</td>
    </tr>
    <tr>
      <td>(d) Sufficient information about a user interface element including the identity operation and state of the element shall be available to assistive technology. When an image represents a program element the information conveyed by the image must also be available in text.</td>
      <td>Supported</td>
      <td>Using WAI-ARIA,roles and attributes where applicable</td>
    </tr>
    <tr>
      <td>(e) When bitmap images are used to identify controls status indicators or other programmatic elements the meaning assigned to those images shall be consistent throughout an application’s performance.</td>
      <td>Not Applicable</td>
      <td></td>
    </tr>
    <tr>
      <td>(f) Textual information shall be provided through operating system functions for displaying text. The minimum information that shall be made available is text content text input caret location and text attributes.</td>
      <td>Not Applicable</td>
      <td></td>
    </tr>
    <tr>
      <td>(g) Applications shall not override user selected contrast and color selections and other individual display attributes.</td>
      <td>Not Applicbale</td>
      <td></td>
    </tr>
    <tr>
      <td>(h) When animation is displayed the information shall be displayable in at least one non-animated presentation mode at the option of the user.</td>
      <td>Not Applicable</td>
      <td></td>
    </tr>
    <tr>
      <td>(i) Color coding shall not be used as the only means of conveying information indicating an action, prompting a response or distinguishing a visual element.</td>
      <td>Not Applicable</td>
      <td></td>
    </tr>
    <tr>
      <td>(j) When a product permits a user to adjust color and contrast settings a variety of color selections capable of producing a range of contrast levels shall be provided.</td>
      <td>Not Applicable</td>
      <td></td>
    </tr>
    <tr>
      <td>(k) Software shall not use flashing or blinking text, objects, or other elements having a flash or blink frequency greater than 2 Hz and lower than 55 Hz.</td>
      <td>Supported</td>
      <td>No flashing or blinking elements are used</td>
    </tr>
    <tr>
      <td>(l) When electronic forms are used, the form shall allow people using assistive technology to access the information, field elements, and functionality required for completion and submission of the form, including all directions and cues.</td>
      <td>Supported</td>
      <td>Mobiscroll Forms are accessible to assistive technologies</td>
    </tr>
  </tbody>
</table>

### [Section 1194.22](https://www.access-board.gov/ict/#d22) - Web-based intranet and Internet information and applications

The following table shows the level of support that Mobiscroll provides for the Section 1194.21

<table>
  <tbody>
    <tr>
      <th>Criteria</th>
      <th>Supporting features</th>
      <th>Remarks</th>
    </tr>
    <tr>
      <td>(a) A text equivalent for every non-text element shall be provided (e.g., via “alt", “longdesc", or in element content).</td>
      <td>Supported</td>
      <td></td>
    </tr>
    <tr>
      <td>(b) Equivalent alternatives for any multimedia presentation shall be synchronized with the presentation.</td>
      <td>Not Applicable</td>
      <td>No multimedia is used</td>
    </tr>
    <tr>
      <td>(c) Web pages shall be designed so that all information conveyed with color,is also available without color for example from context or markup.</td>
      <td>Supported</td>
      <td></td>
    </tr>
    <tr>
      <td>(d) Documents shall be organized so they are readable without requiring an associated style sheet.</td>
      <td>Not fully supported</td>
      <td>We’re providing an UI Framework for styling content. Removing style sheets doesn’t make sense</td>
    </tr>
    <tr>
      <td>(e) Redundant text links shall be provided for each active region of a server-side image map.</td>
      <td>Not Applicable</td>
      <td>No image maps are used</td>
    </tr>
    <tr>
      <td>(f) Client-side image maps shall be provided instead of server-side image maps except where the regions cannot be defined with an available geometric shape.</td>
      <td>Not Applicable</td>
      <td>No image maps are used</td>
    </tr>
    <tr>
      <td>(g) Row and column headers shall be identified for data tables.</td>
      <td>Not Applicable</td>
      <td>No data tabels are used</td>
    </tr>
    <tr>
      <td>(h) Markup shall be used to associate data cells and header cells for data tables that have two or more logical levels of row or column headers.</td>
      <td>Not Applicable</td>
      <td>No data tabels are used</td>
    </tr>
    <tr>
      <td>(i) Frames shall be titled with text that facilitates frame identification and navigation.</td>
      <td>Not Applicable</td>
      <td>No frames are used</td>
    </tr>
    <tr>
      <td>(j) Pages shall be designed to avoid causing the screen to flicker with a frequency greater than 2 Hz and lower than 55 Hz.</td>
      <td>Supported</td>
      <td>No flashing or blinking elements are used</td>
    </tr>
    <tr>
      <td>(k) A text-only page with equivalent information or functionality shall be provided to make a web site comply with the provisions of this part, when compliance cannot be accomplished in any other way. The content of the text-only page shall be updated whenever the primary page changes.</td>
      <td>Not Applicable</td>
      <td>The developer is responsible for providing text-only content for pages that use Mobiscroll</td>
    </tr>
    <tr>
      <td>(l) When pages utilize scripting languages to display content or to create interface elements the information provided by the script shall be identified with functional text that can be read by assistive technology.</td>
      <td>Supported</td>
      <td>Mobiscroll provides keyboard navigation support and screen reader support (via ARIA attributes)</td>
    </tr>
    <tr>
      <td>(m) When a web page requires that an applet, plug-in or other application be present on the client system to interpret page content the page must provide a link to a plug-in or applet that complies with §1194.21(a),through (l).</td>
      <td>Not Supported</td>
      <td></td>
    </tr>
    <tr>
      <td>(n) When electronic forms are designed to be completed on-line, the form shall allow people using assistive technology to access the information field elements and functionality required for completion and submission of the form including all directions and cues.</td>
      <td>Supported</td>
      <td>Mobiscroll Forms are accessible to assistive technologies</td>
    </tr>
    <tr>
      <td>(o) A method shall be provided that permits users to skip repetitive navigation links.</td>
      <td>Not Applicable</td>
      <td></td>
    </tr>
    <tr>
      <td>(p) When a timed response is required the user shall be alerted and given sufficient time to indicate more time is required.</td>
      <td>Not Applicable</td>
      <td></td>
    </tr>
  </tbody>
</table>

## WAI-ARIA Support

WAI-ARIA is a World Wide Web Consortium specification that was designed to be a framework for web developers. This can be used in developing applications that leverage Ajax, scripting and other so called “rich application" techniques. This framework has clear specifications about steps that developers can use in order to make their applications more accessible to assistive technologies.

WAI-ARIA’s role is to fill the gap between rich applications and disabled users by using additional metadata with the help of HTML element attributes that screen readers can use to reason about a control or DOM element. These attributes, like role, aria-haspopup, aria-selected and others provide vital information to screen readers, which can then be used to provide a richer level of interaction with applications and websites.

Here is the complete list of WAI-ARIA attributes used by Mobiscroll:

- `role="dialog"` for popups and pickers
- `role="grid"` for calendar view
- `role="row"` for calendar view rows
- `role="gridcell"` for calendar views cells
- `role="listbox"` for scroller wheels
- `role="option"` for scroller wheel items
- `role="button"` for button controls
- `aria-live` for announcements
- `aria-hidden` for elements which are not visible and should not be read by screen readers
- `aria-label` for controls without text or icon buttons
- `aria-selected` for indicating selected value on wheels and calendar days
- `aria-multiselectable` for multiple select
- `aria-disabled` for disabled items (wheel items, buttons, calendar days)

## Support Right-To-Left (RTL) Languages

Only a few languages in the world use RTL text direction, but these languages cover over a billion people.

Beside it’s internationalization characteristic RTL is about making user experiences more accessible for users working in Right-to-left languages like, so we are considering this as an accessibility feature as well.

Mobiscroll supports RTL for every component, which can be activated with the `rtl: true` option.

## Keyboard Support

Mobiscroll ensures that your users can access the full capabilities of widgets using just the keyboard.

The following keyboard bindings are used by Mobiscroll:
- [Datepicker](../datepicker/accessibility)
- [Eventcalendar](../eventcalendar/accessibility)
- [Select](../select/accessibility)
- [Popup](../popup/accessibility)
- [Alerts & notifications](../notifications/accessibility)
- [Form components](../forms/accessibility)